--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
 <h1 class="text-color">Welcome to Frederik's Page</h1>
 
 <div class="menu">
-    <a href="index.html">Index</a>
-    <a href="aboutFrederik.html">About Me</a>
+    <a href="/">
+        <button class="button">Index</button>
+    </a>
+    <a href="aboutFrederik.html">
+        <button class="button"></button>
+    </a>
 </div>
 
 </body>
