--- a/aboutFrederik.html
+++ b/aboutFrederik.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th=""http://w3.org/1990/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>About Frederik</title>
+    <link rel="stylesheet" type="text/css" href="all.css">
 </head>
 <body>
 
-</body>
+</>
 </html>
