--- a/aboutFrederik.html
+++ b/aboutFrederik.html
@@ -2,9 +2,20 @@
 <html lang="en" xmlns:th=""http://w3.org/1990/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>About Frederik</title>
-    <link rel="stylesheet" type="text/css" href="all.css">
+<title>About Frederik</title>
+<link rel="stylesheet" type="text/css" href="all.css">
 </head>
+<header>
+    <h1 class="text-color">Welcome to Frederik's Page</h1>
+    <div class="menu">
+        <a href="/">
+            <button class="button">Index</button>
+        </a>
+        <a href="aboutFrederik.html">
+            <button class="button">About me</button>
+        </a>
+    </div>
+</header>
 <body>
 
 </>
