--- a/index.html
+++ b/index.html
@@ -2,21 +2,23 @@
 <html lang="en" xmlns:th=""http://w3.org/1990/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>Git Index</title>
+    <title>Frontpage</title>
     <link rel="stylesheet" type="text/css" href="all.css">
 </head>
+<header>
+    <h1 class="text-color">Welcome to Frederik's Page</h1>
+    <div class="menu">
+        <a href="/">
+            <button class="button">Index</button>
+        </a>
+        <a href="aboutFrederik.html">
+            <button class="button">About me</button>
+        </a>
+    </div>
+</header>
 <body>
 
-<h1 class="text-color">Welcome to Frederik's Page</h1>
 
-<div class="menu">
-    <a href="/">
-        <button class="button">Index</button>
-    </a>
-    <a href="aboutFrederik.html">
-        <button class="button"></button>
-    </a>
-</div>
 
 </body>
 </html>
