--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <h1 class="text-color">Welcome to Frederik's Page</h1>
     <div class="menu">
         <a href="/">
-            <button class="button">Index</button>
+            <button class="cool-button">Index</button>
         </a>
         <a href="aboutFrederik.html">
-            <button class="button">About me</button>
+            <button class="cool-button">About me</button>
         </a>
     </div>
 </header>
