--- a/aboutFrederik.html
+++ b/aboutFrederik.html
@@ -18,8 +18,13 @@
 </header>
 <body>
 
-<div class="Text about me">
-
+<div class="about-me">
+<img src="https://scontent-cph2-1.xx.fbcdn.net/v/t31.18172-8/1400749_10151940891679544_524732147_o.jpg?_nc_cat=106&ccb=1-5&_nc_sid=e3f864&_nc_ohc=ZaH24eKHQF0AX-cu7B4&_nc_ht=scontent-cph2-1.xx&oh=69a69244f3138861ef14cdf95e62d4d6&oe=61884D8F">
+    <div class="about-description">
+        <ul class="about-description">
+            Skiing and the mountains is my big passion. It is where I would like to be for the most of my life.
+        </ul>
+    </div>
 </div>
 </>
 </html>
