--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         <a href="aboutFrederik.html">
             <button class="button">About me</button>
         </a>
+        <a href="motorcycles.html">
+            <button class="button"Motorcycles></button>
+        </a>
     </div>
 </header>
 <body>
