--- a/aboutFrederik.html
+++ b/aboutFrederik.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th=""http://w3.org/1990/xhtml">
+<html lang="en" xmlns:th="http://w3.org/1990/xhtml">
 <head>
     <meta charset="UTF-8">
 <title>About Frederik</title>
@@ -22,12 +22,13 @@
 
 <body>
 <div class="about-me">
-<img src="https://scontent-cph2-1.xx.fbcdn.net/v/t31.18172-8/1400749_10151940891679544_524732147_o.jpg?_nc_cat=106&ccb=1-5&_nc_sid=e3f864&_nc_ohc=ZaH24eKHQF0AX-cu7B4&_nc_ht=scontent-cph2-1.xx&oh=69a69244f3138861ef14cdf95e62d4d6&oe=61884D8F">
+<img src="https://i.imgur.com/K8HlhZJ.jpeg">
     <div class="about-description">
         <ul class="about-description">
             Skiing and the mountains is my big passion. It is where I would like to be for the most of my life.
         </ul>
     </div>
 </div>
-</>
+</body>
+
 </html>
