--- a/motorcycles.html
+++ b/motorcycles.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th=""http://w3.org/1990/xhtml">
+<html lang="en" xmlns:th="http://w3.org/1990/xhtml">
 <head>
   <meta charset="UTF-8">
   <title>Motorcycles</title>
@@ -22,7 +22,7 @@
 
 <body>
 <div class="motorcycles">
-  <img src="https://imgur.com/a/09Eqo5A">
+  <img src="https://i.imgur.com/CWOsu6I.png">
   <div class="motorcycle-desc">
     <ul class="motorcycle-desc">
       Currently I own this KTM, I am looking to give the engine a little TLC. Before this KTM I had a Suzuki GSX750.
