--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th=""http://w3.org/1990/xhtml">
+<html lang="en" xmlns:th="http://w3.org/1990/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Frontpage</title>
