--- a/aboutFrederik.html
+++ b/aboutFrederik.html
@@ -22,7 +22,7 @@
 
 <body>
 <div class="about-me">
-<img src="https://i.imgur.com/K8HlhZJ.jpeg">
+<img src="https://i.imgur.com/xo8hCoT.png">
     <div class="about-description">
         <ul class="about-description">
             Skiing and the mountains is my big passion. It is where I would like to be for the most of my life.
