--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
 </header>
 
 <body>
+<div class="trololo">
+    <a href="/trololo">
+        <img src="https://i.imgur.com/wPoIMvO.png">
+    </a>
 
+</div>
 </body>
 </html>
