--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
 <div class="trololo">
     <a href="/trololo">
         <img src="https://i.imgur.com/wPoIMvO.png">
+        <div class="text">
+            <ul class="text">
+                Click me
+            </ul>
+        </div>
     </a>
 
 </div>
