--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <button class="button">About me</button>
         </a>
         <a href="motorcycles.html">
-            <button class="button">Motorcycles></button>
+            <button class="button">Motorcycles</button>
         </a>
     </div>
 </header>
