--- a/aboutFrederik.html
+++ b/aboutFrederik.html
@@ -15,14 +15,14 @@
             <button class="button">About me</button>
         </a>
         <a href="motorcycles.html">
-            <button class="button">Motorcycles></button>
+            <button class="button">Motorcycles</button>
         </a>
     </div>
 </header>
 
 <body>
 <div class="about-me">
-<img src="https://i.imgur.com/xo8hCoT.png" width="600" height="200">
+<img src="https://i.imgur.com/xo8hCoT.png" width="800" height="400">
     <div class="about-description">
         <ul class="about-description">
             Skiing and the mountains is my big passion. It is where I would like to be for the most of my life.
