--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
 <div class="trololo">
     <a href="/trololo">
-        <img src="https://i.imgur.com/wPoIMvO.png">
+        <img src="https://i.imgur.com/wPoIMvO.png" alt="freepo">
         <div class="text">
             <ul class="text">
                 Click me
