--- a/motorcycles.html
+++ b/motorcycles.html
@@ -22,7 +22,7 @@
 
 <body>
 <div class="motorcycles">
-  <img src="https://i.imgur.com/CWOsu6I.png" width="300" height="500">
+  <img src="https://i.imgur.com/CWOsu6I.png" width="300" height="500" alt="motorcycle">
   <div class="motorcycle-desc">
     <ul class="motorcycle-desc">
       Currently I own this KTM, I am looking to give the engine a little TLC. Before this KTM I had a Suzuki GSX750.
