--- a/motorcycles.html
+++ b/motorcycles.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" type="text/css" href="all.css">
 </head>
 <header>
-  <h1 class="text-color">Welcome to Frederik's Page</h1>
+  <h1 class="text-color">Welcome to the page of Frederik</h1>
   <div class="menu">
     <a href="/">
       <button class="button">Index</button>
