--- a/trololo.html
+++ b/trololo.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" type="text/css" href="all.css">
 </head>
 <body>
-<video src="https://www.youtube.com/watch?v=dQw4w9WgXcQ" autoplay>
-</video>
+<div class="video">
+    <video src="https://www.youtube.com/watch?v=dQw4w9WgXcQ" autoplay></video>
+</div>
 </body>
 </html>
