--- a/trololo.html
+++ b/trololo.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" type="text/css" href="all.css">
 </head>
 <body>
-<div class="video">
-    <video src="https://www.youtube.com/watch?v=dQw4w9WgXcQ" autoplay></video>
+<iframe width="1920" height="1080" src="https://www.youtube.com/embed/tgbNymZ7vqY?autoplay=1" allowfullscreen>
+</iframe>
 </div>
 </body>
 </html>
