--- a/trololo.html
+++ b/trololo.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="all.css">
 </head>
 <body>
-<iframe width="1920" height="1080" src="https://www.youtube.com/embed/tgbNymZ7vqY?autoplay=1" allowfullscreen>
+<iframe width="1280" height="720" src="https://www.youtube.com/watch?v=dQw4w9WgXcQ?autoplay=1" allowfullscreen>
 </iframe>
 </div>
 </body>
